--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     justify-content: center;
 }
 
-.instagram-rapper {
+.instagram-wrapper {
     display: flex;
     align-items: center;
     justify-content: start;
